--- a/notebook01.ipynb
+++ b/notebook01.ipynb
@@ -439,6 +439,7 @@
    },
    "outputs": [],
    "source": [
+    "import os \n",
     "\n",
     "# Save the best model\n",
     "pipeline_filename = 'churn_prediction_pipeline.pkl'\n",
